--- a/basic/exception.qmd
+++ b/basic/exception.qmd
@@ -16,6 +16,10 @@ source(here("_common.R"))
 - `else` lets you code sections that should run only when no exceptions are encountered in the try clause.
 - `finally` enables you to execute sections of code that should always run, with or without any previously encountered exceptions.
 
+## Concept
+
+1. put as little code as possible in the try block. You do this so your except block(s) will not catch or mask errors that they should not.
+
 ## Raising Exception
 
 
@@ -171,6 +175,29 @@ except FileNotFoundError as fnf_error:
 except AssertionError as error:
     print(error)
     print('Linux mac_interaction() function was not executed')
+```
+
+## `try` and `except` catch error
+
+### Ex: Atomic numbers of noble gases.
+
+```{python}
+nobles = {'He': 2, 'Ne': 10, 'Ar': 18, 'Kr': 36, 'Xe': 54}
+
+def show_element_info(elements):
+   for element in elements:
+       print('Atomic number of {} is {}'.format(
+             element, nobles[element]))
+```
+
+
+```{python}
+try:
+    show_element_info(['Ne', 'Ar', 'Br'])
+except KeyError as err:
+    missing_element = err.args[0]
+    print(f"Error args: {err.args}")
+    print(f"Missing data for element: {missing_element}")
 ```
 
 ## `else` clause
