add docstring in timer

--- a/basic/context/context-custom.ipynb
+++ b/basic/context/context-custom.ipynb
@@ -99,12 +99,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from contextlib import contextmanager\n",
+    "from typing import Generator, IO, Any"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "@contextmanager\n",
     "def timer():\n",
+    "    \"\"\"Context manager for measuring execution time.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    callable\n",
+    "        A lambda function that returns the elapsed time\n",
+    "        \n",
+    "    Example\n",
+    "    -------\n",
+    "    ```python\n",
+    "    with timer() as t:\n",
+    "        # some code to measure\n",
+    "        pass\n",
+    "    t = t() \n",
+    "    t  # prints elapsed time\n",
+    "    ```\n",
+    "    \"\"\"\n",
     "    start_time: float = time.perf_counter()\n",
     "    try:\n",
     "        yield lambda: elapsed\n",
