--- a/contents/webscrape/bs4soup-basic.ipynb
+++ b/contents/webscrape/bs4soup-basic.ipynb
@@ -273,7 +273,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
+   "id": "013def6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a class=\"sister\" href=\"http://example.com/elsie\" id=\"link1\">Elsie</a>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "ce4abc39",
    "metadata": {},
    "outputs": [
@@ -285,7 +306,7 @@
        " <a class=\"sister\" href=\"http://example.com/tillie\" id=\"link3\">Tillie</a>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,6 +373,71 @@
    "source": [
     "for link in soup.find_all('a'):\n",
     "    print(link.get('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7e16a96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://example.com/elsie',\n",
+       " 'http://example.com/lacie',\n",
+       " 'http://example.com/tillie']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[link.get(\"href\") for link in soup.find_all('a')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d85903c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a', 'a']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[link.name for link in soup.find_all('a')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8779c8d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Elsie', 'Lacie', 'Tillie']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[link.string for link in soup.find_all('a')]"
    ]
   },
   {
