Add markdown header for PDF download section in notebook

--- a/contents/webscrape/bs4soup-fetch.ipynb
+++ b/contents/webscrape/bs4soup-fetch.ipynb
@@ -571,6 +571,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88a5bdf6",
+   "metadata": {},
+   "source": [
+    "### Download PDF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 167,
    "id": "8c938da6",
