auto detect encoding

--- a/contents/webscrape/bs4soup-fetch.ipynb
+++ b/contents/webscrape/bs4soup-fetch.ipynb
@@ -21,26 +21,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "bfb3cece",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import chardet\n",
+    "\n",
+    "\n",
     "def fetch_urlsoup(url, timeout=10):\n",
     "    \"\"\"Download HTML content from a URL and return a BeautifulSoup object.\"\"\"\n",
     "    headers = {\n",
-    "        'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36',\n",
-    "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8',\n",
-    "        'Accept-Language': 'en-US,en;q=0.5'\n",
+    "        \"User-Agent\": \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36\",\n",
+    "        \"Accept\": \"text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8\",\n",
+    "        \"Accept-Language\": \"en-US,en;q=0.5\",\n",
     "    }\n",
     "    try:\n",
     "        # Try to download the webpage\n",
     "        response = requests.get(url, timeout=timeout, headers=headers)\n",
     "        response.raise_for_status()\n",
-    "        \n",
+    "\n",
+    "        # Auto-detect encoding\n",
+    "        detected = chardet.detect(response.content)\n",
+    "        response.encoding = detected[\"encoding\"]\n",
+    "\n",
     "        # Return BeautifulSoup object if successful\n",
-    "        return BeautifulSoup(response.text, 'html.parser')\n",
-    "    \n",
+    "        return BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
     "    except requests.exceptions.HTTPError as e:\n",
     "        print(f\"HTTP Error: {e}\")\n",
     "    except requests.exceptions.ConnectionError as e:\n",
@@ -49,9 +58,9 @@
     "        print(f\"Timeout Error: {e}\")\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(f\"Request Exception: {e}\")\n",
-    "    \n",
+    "\n",
     "    # Return None if any exception occurred\n",
-    "    return None"
+    "    return None\n"
    ]
   },
   {
